# Proton-TestCase

LinuxClient/: CMakeLists.txt  main.cpp
LinuxClient/client/: CMakeLists.txt  client.cpp  client.h
LinuxClient/serverInfo/: CMakeLists.txt  serverinfo.cpp  serverinfo.h
LinuxClient/socket/: receivebehavior.cpp  sendbehavior.cpp  socket.cpp
LinuxServer/: CMakeLists.txt  main.cpp
LinuxServer/server/: CMakeLists.txt  processingbehavior.cpp  processingbehavior.h  server.cpp  server.h
LinuxServer/socket/: CMakeLists.txt  receivebehavior.h  sendbehavior.h  socket.cpp  socket.h
